fix: update user setting service logic
